force-app/main/default/objects/Incentive_Contract__c/Incentive_Contract__c.object-meta.xml
<CustomObject>
    <label>Incentive Contract</label>
    <nameField>
        <label>Incentive Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentive Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>