force-app/main/default/objects/Incentive_Contract__c/fields/Company_Signed_By__c.field-meta.xml
<CustomField>
    <fullName>Company_Signed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Signed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incentive_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>