force-app/main/default/objects/Incentive_Contract__c/fields/Company_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Company_Signed_Date__c</fullName>
    <label>Company Signed Date</label>
    <type>Date</type>
</CustomField>