force-app/main/default/objects/Incentive_Contract__c/fields/Contact_Point_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Point_Email__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Point Email</label>
    <referenceTo>ContactPointEmail</referenceTo>
    <relationshipLabel>Incentive Contracts</relationshipLabel>
    <relationshipName>Incentive_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>