force-app/main/default/objects/Incentive_Contract__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incentive_Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>