force-app/main/default/objects/Incentive_Contract__c/fields/Customer_Signed_Title__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signed_Title__c</fullName>
    <label>Customer Signed Title</label>
    <length>40</length>
    <type>Text</type>
</CustomField>