force-app/main/default/objects/Incentive_Contract__c/fields/Incentive_Contract_Owner__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Contract_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incentive Contract Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incentive_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>