force-app/main/default/objects/Incentive_Contract__c/fields/Incentive_Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Contract_Term__c</fullName>
    <label>Incentive Contract Term (Months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>