force-app/main/default/objects/Incentive_Contract__c/fields/Incentive_Parent_Seed_Code__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Parent_Seed_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incentive Parent Seed Code</label>
    <referenceTo>Incentive_Parent_Seed_Code__c</referenceTo>
    <relationshipLabel>Incentive Contracts</relationshipLabel>
    <relationshipName>Incentive_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>