force-app/main/default/objects/Incentive_Contract__c/fields/Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incentive_Contracts3</relationshipName>
    <type>Lookup</type>
</CustomField>